--- a/EcommerceApp.Api/appsettings.json
+++ b/EcommerceApp.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "EcommerceAppConnection": "Server=LAPTOP-DFGIU5BD\\SQLEXPRESS01;Database=EcommerceApp;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
